tests/build/cases/ui_node/invalid_delegate_pair_name.stderr
error: expected `child`, `children`, `delegate`, or, `delegate_list`
 --> cases/ui_node/invalid_delegate_pair_name.rs:6:11
  |
6 | #[ui_node(delegate2 = &mut self.inner)]
  |           ^^^^^^^^^

warning: unused import: `UiNode`
 --> cases/ui_node/invalid_delegate_pair_name.rs:1:48
  |
1 | use zero_ui::wgt_prelude::{ui_node, NilUiNode, UiNode};
  |                                                ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
